--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "bariendo"
+name = "prenuvo-pii"
 version = "0.1.0"
-description = "Nutrition and Diet Recommendation Tool monolith combining database, domain, and service functionality."
+description = "User PII repo"
 authors = ["Craig Holland <craig_holland@hotmail.com>"]
 license = "AGPL-3.0"
 readme = "README.md"
 packages = [
-    { include = "bariendo" }
+    { include = "pii" }
 ]
 
 [tool.poetry.dependencies]
@@ -39,7 +39,7 @@ isort = "^5.12.0"
 flake8 = "^6.1.0"
 
 [tool.poetry.scripts]
-start = "bariendo.services.main:main"
+start = "pii.services.main:main"
 
 [build-system]
 requires = ["poetry-core"]
