refactor for pii

--- a/pii/database/data/docker-compose.yml
+++ b/pii/database/data/docker-compose.yml
@@ -12,5 +12,5 @@ services:
     volumes:
       - ${PGDATA_VOLUME}:/var/lib/postgresql/data
 volumes:
-  pgdata:
+  prenuvo_pii_pgdata:
     external: true
