--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ alembic-utils = "^0.8.8"
 sqlalchemy = "^2.0.41"
 tqdm = "^4.67.1"
 testcontainers = {extras = ["postgresql"], version = "^4.10.0"}
+arrow = "^1.3.0"
 
 [tool.poetry.group.dev]
 optional = false
