--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ sqlalchemy = "^2.0.41"
 tqdm = "^4.67.1"
 testcontainers = {extras = ["postgresql"], version = "^4.10.0"}
 arrow = "^1.3.0"
+pandas = "^2.3.1"
+google-api-python-client = "^2.176.0"
+google-cloud = "^0.34.0"
+google-cloud-vision = "^3.10.2"
 
 [tool.poetry.group.dev]
 optional = false
